--- a/First_Model.ipynb
+++ b/First_Model.ipynb
@@ -92,7 +92,11 @@
       "metadata": {
         "id": "ZP7oCBkChlBl",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 368
+        },
+        "outputId": "e087ac20-456a-4690-be73-db5a9b657d19"
       },
       "source": [
         "from PIL import Image\n",
@@ -107,8 +111,22 @@
         "import time\n",
         "%matplotlib inline"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-6846797cfd88>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtorchvision\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtorchvision\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtransforms\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdatasets\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mbcolz\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmagic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'matplotlib inline'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'bcolz'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -125,18 +143,19 @@
       "metadata": {
         "id": "irz3XZuylPCJ",
         "colab_type": "code",
-        "outputId": "8fad13ef-7ac3-4d96-c012-1f5629c3c023",
+        "outputId": "eb24df23-4f63-4e1d-e80f-3aa9e0abc14a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
       "source": [
+        "# Downloading the rar file storing all our images\n",
         "link = 'https://drive.google.com/open?id=1py-LmKhQuqwHFvEoSHIH44S60He4IYox'\n",
         "fluff, id = link.split('=')\n",
         "print(id) # Verify that you have everything after '='"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,6 +174,7 @@
         "colab": {}
       },
       "source": [
+        "# \n",
         "downloaded = drive.CreateFile({'id':id}) \n",
         "downloaded.GetContentFile('X_sample.rar')  "
       ],
@@ -169,6 +189,7 @@
         "colab": {}
       },
       "source": [
+        "# Creating folder\n",
         "%mkdir images"
       ],
       "execution_count": 0,
@@ -182,6 +203,7 @@
         "colab": {}
       },
       "source": [
+        "# Unzipping file\n",
         "!unrar e X_sample.rar images"
       ],
       "execution_count": 0,
@@ -190,42 +212,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BLnOdyocsqGl",
+        "id": "pWmv5tXly1Iq",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 34
         },
-        "outputId": "8ed76a34-e188-4c5e-d1ee-b92edef5af2a"
+        "outputId": "539ec3e8-1427-4653-fa0a-5723aac85b3f"
       },
       "source": [
-        "%cd ../\n",
-        "!ls"
+        "# Opening \"images\" folder\n",
+        "%cd images"
       ],
-      "execution_count": 15,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/content\n",
-            "adc.json  images  sample_data  X_sample.rar\n"
+            "/content/images\n"
           ],
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "pWmv5tXly1Iq",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "%cd images"
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
