--- a/First_Model.ipynb
+++ b/First_Model.ipynb
@@ -92,11 +92,7 @@
       "metadata": {
         "id": "ZP7oCBkChlBl",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 368
-        },
-        "outputId": "e087ac20-456a-4690-be73-db5a9b657d19"
+        "colab": {}
       },
       "source": [
         "from PIL import Image\n",
@@ -111,22 +107,8 @@
         "import time\n",
         "%matplotlib inline"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-6846797cfd88>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtorchvision\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtorchvision\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtransforms\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdatasets\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mbcolz\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmagic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'matplotlib inline'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'bcolz'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ]
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -153,7 +135,9 @@
         "# Downloading the rar file storing all our images\n",
         "link = 'https://drive.google.com/open?id=1py-LmKhQuqwHFvEoSHIH44S60He4IYox'\n",
         "fluff, id = link.split('=')\n",
-        "print(id) # Verify that you have everything after '='"
+        "print(id) # Verify that you have everything after '='\n",
+        "downloaded = drive.CreateFile({'id':id}) \n",
+        "downloaded.GetContentFile('X_sample.rar')"
       ],
       "execution_count": 3,
       "outputs": [
@@ -169,71 +153,22 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hkFJbIiilPAI",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# \n",
-        "downloaded = drive.CreateFile({'id':id}) \n",
-        "downloaded.GetContentFile('X_sample.rar')  "
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "58ZpdOH2qp3Q",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
         "# Creating folder\n",
-        "%mkdir images"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6sMUetoVlO-b",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
+        "%mkdir images\n",
+        "\n",
         "# Unzipping file\n",
-        "!unrar e X_sample.rar images"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "pWmv5tXly1Iq",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "539ec3e8-1427-4653-fa0a-5723aac85b3f"
-      },
-      "source": [
+        "!unrar e X_sample.rar images\n",
+        "\n",
         "# Opening \"images\" folder\n",
         "%cd images"
       ],
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/content/images\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
